# MeshPolygonization

./: .gitignore  CMakeLists.txt  build.bat
3rd_rply/: CMakeLists.txt
MeshPolygonization/: MeshSimplification.cpp  Simplification.cpp
proj/: MeshSimplification.vcxproj
